--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "dev": "./node_modules/.bin/nodemon ./server/bin/www",
     "start": "node ./server/bin/www"
   },
   "dependencies": {
