--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "./node_modules/.bin/nodemon ./server/bin/www",
-    "start": "node ./server/bin/www"
+    "start": "babel-node ./server/bin/www --presets es2015",
+    "debug": "babel-node ./server/bin/www --presets es2015 --debug"
   },
   "dependencies": {
+    "babel-node-debug": "^2.0.0",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
@@ -18,5 +20,8 @@
     "mongodb": "^2.2.10",
     "morgan": "~1.7.0",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.18.0"
   }
 }
