--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.18.0"
+    "babel-jest": "^18.0.0",
+    "babel-preset-es2015": "^6.18.0",
+    "jest-cli": "^18.1.0"
+  },
+  "jest": {
+    "automock": false
   }
 }
